--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
             <ul class="menu">
-                <li> <a class="menu-link" href="./index.html">Студия</a></li>
+                <li> <a class="current-page" href="./index.html">Студия</a></li>
                 <li> <a class="menu-link" href="./portfolio.html">Портфолио</a></li>
                 <li> <a class="menu-link" href="#">Контакты</a></li>
             </ul>
