--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
             <ul class="menu">
                 <li> <a class="menu-link" href="./index.html">Студия</a></li>
-                <li> <a class="menu-link" href="./portfolio.html">Портфолио</a></li>
+                <li> <a class="current-page" href="./portfolio.html">Портфолио</a></li>
                 <li> <a class="menu-link" href="#">Контакты</a></li>
             </ul>
         </nav>
