кнопки, ховер-фокус, тени

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
             <h1 hidden>Направления работ</h1>
             <ul class="type-of-works-buttons">
                 <li>
-                    <button class="type-selection-btm" type="button">Все</button>
+                    <button class="type-selection-btm type-selection-btm-all" type="button">Все</button>
                 </li>
                 <li>
                     <button class="type-selection-btm" type="button">Веб-сайты</button>
